tests/ui/layout/unknown-when-no-type-parameter.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/unknown-when-no-type-parameter.rs:8:10
   |
LL |     [(); size_of::<<() as Project>::Assoc>()];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the type `<() as Project>::Assoc` has an unknown layout
   |
note: inside `std::mem::size_of::<<() as Project>::Assoc>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
